--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - revert back to sending the config as a string to cli from universal-server-process
 "@applitools/eyes-selenium":
   feature:
     - |
@@ -107,7 +107,8 @@ Apollo SDK:
     - Allow running with self-signed certificates
 "@applitools/eyes-cypress":
   feature:
-    - 
+    - |
+     `cy.eyesCheckWindow` now supports passing DOM elements and jQuery object for target and regions.
   bug-fix:
     - Support `cy.eyesGetAllTestResults` in TypeScript
 "@applitools/eyes-storybook":
