--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -60,14 +60,14 @@
     }
   },
   "dependencies": {
+    "@applitools/logger": "1.1.5",
     "@applitools/snippets": "2.2.3",
     "@applitools/utils": "1.3.0",
     "png-async": "0.9.4"
   },
   "devDependencies": {
     "@applitools/bongo": "^2.0.3",
-    "@applitools/driver": "^1.8.1",
-    "@applitools/logger": "^1.1.4",
+    "@applitools/driver": "^1.8.6",
     "@applitools/scripts": "1.1.0",
     "@applitools/spec-driver-webdriverio": "1.2.9",
     "@applitools/test-utils": "1.3.2",
