--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
 "@applitools/eyes-selenium":
   feature:
     - |
@@ -22,6 +22,7 @@ Apollo SDK:
   bug-fix:
     - Fixed check region fully in classic execution when using CSS stitching
     - Fixed handling of navigation bar size on various devices
+    - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
 "@applitools/eyes-webdriverio":
   feature:
     - |
@@ -31,6 +32,7 @@ Apollo SDK:
   bug-fix:
     - Fixed handling of navigation bar size on various devices
     - Allow running with self-signed certificates
+    - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
 "@applitools/eyes-playwright":
   feature:
     - |
@@ -60,6 +62,7 @@ Apollo SDK:
     - Support data urls in iframes
     - Fixed handling of navigation bar size on various devices
     - Allow running with self-signed certificates
+    - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
 "@applitools/eyes-puppeteer":
   feature:
     - Support UFG for native mobile
@@ -105,6 +108,7 @@ Apollo SDK:
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
     - Allow running with self-signed certificates
+    - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
 "@applitools/eyes-cypress":
   feature:
     - 
