--- a/.github/workflows/publish-cypress.yml
+++ b/.github/workflows/publish-cypress.yml
@@ -59,6 +59,7 @@ jobs:
           yarn install
           yarn build
           npx bongo release-pre-check --skip-deps --skip-commit --skip-verify-installed-versions
+          npx bongo verify-changelog
       - name: Prepare environments
         id: prepare
         shell: bash
