change exception property in testResultsSummary to be of type TestResultsException (#878)
* change exception property in testResultsSummary to be of type TestResultsException to avoid using a complex object Error for universal clients

* map reason when emmiting an error from socket

* update pending changes

* adjust close test

* add mistakenly deleted line

* skip play test

* undo changes, create new type SeriliazedError that has toJSON method and make sure to call toJSON on the object itself in utils

* add SerializedError to core and throw SerilizedError from EyesVG and EyesClassic

* remove unnecessary changes

* remove SerilizedError from eyes-api

* cast exception on close-manager rather in EyesVG and EyesClassic

* add toJSON to EyesError and add Eyes exceptions to exception property

* adjust exception logic in close-manager

* adjust exception logic and toJSON logic

* add e2e test in core

* adjust test name

Co-authored-by: Sophie Tagar <sophietagar@Sophies-MacBook-Pro-2.local>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,8 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - |
+     exception in TestResultsSummary now should be accepted properly by universal clients, and we now also map `reason` when emitting an error for Eyes exceptions.
 "@applitools/eyes-selenium":
   feature:
     - |
