--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -63,6 +63,7 @@
     "@applitools/logger": "1.1.5",
     "@applitools/snippets": "2.2.3",
     "@applitools/utils": "1.3.0",
+    "jpeg-js": "^0.4.3",
     "png-async": "0.9.4"
   },
   "devDependencies": {
