--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -15,15 +15,20 @@
   },
   "scripts": {
     "test": "yarn build && yarn test:mocha && yarn lint",
+    "test:versions": "yarn build && yarn test:e2e:versions && yarn lint",
     "test:mocha": "yarn test:unit && yarn test:it && yarn test:e2e",
     "test:unit": "STDOUT_LEVEL=0 mocha --no-timeouts --trace-warnings 'test/unit/*.test.js'",
     "test:it": "STDOUT_LEVEL=1 mocha --no-timeouts --trace-warnings 'test/it/*.test.js'",
-    "test:e2e": "mocha --no-timeouts --trace-warnings 'test/e2e/*.test.js'",
+    "test:e2e": "mocha --no-timeouts --trace-warnings 'test/e2e/*.e2e.test.js'",
+    "test:e2e:versions": "npx mocha --no-timeouts --trace-warnings --require test/fixtures/storybook-versions/mochaHooks.js test/e2e/*.e2e.versions.test.js",
+    "test:e2e:versions_local": "STORYBOOK_VERSION=latest npx mocha --no-timeouts --trace-warnings --require test/fixtures/storybook-versions/mochaHooks.js test/e2e/*.e2e.versions.test.js",
     "build": "rollup -c rollup.config.js",
     "build:heavy": "node scripts/bitmap.js",
     "lint": "eslint '**/*.js'",
     "storybook": "start-storybook -c test/fixtures/appWithStorybook -p 9001 -s test/fixtures",
     "storybook:jslayout": "start-storybook -c test/fixtures/jsLayoutStorybookLocal -p 9001 -s test/fixtures",
+    "storybook:csf": "yarn storybook:csf-service && start-storybook -c test/fixtures/storybookCSF/.storybook-temp -p 9001",
+    "storybook:csf-service": "cp -r test/fixtures/storybookCSF/.storybook/. test/fixtures/storybookCSF/.storybook-temp && rm test/fixtures/storybookCSF/.storybook-temp/config.js",
     "storybook:heavy": "start-storybook -c test/fixtures/heavyStorybook -p 9002 -s test/fixtures",
     "storybook:zeroStories": "start-storybook -c test/fixtures/zeroStoriesRetry -p 9003 -s test/fixtures",
     "eyes-storybook": "node bin/eyes-storybook.js -f test/fixtures/applitools.config.js",
@@ -59,15 +64,15 @@
     "directory": "packages/eyes-storybook"
   },
   "dependencies": {
-    "@applitools/driver": "1.6.0",
-    "@applitools/eyes-sdk-core": "13.2.5",
+    "@applitools/driver": "1.8.12",
+    "@applitools/eyes-sdk-core": "13.6.19",
     "@applitools/functional-commons": "1.6.0",
-    "@applitools/logger": "1.0.11",
+    "@applitools/logger": "1.1.5",
     "@applitools/monitoring-commons": "1.0.19",
     "@applitools/spec-driver-puppeteer": "1.1.1",
     "@applitools/test-server": "1.0.8",
-    "@applitools/utils": "1.2.13",
-    "@applitools/visual-grid-client": "15.11.2",
+    "@applitools/utils": "1.3.0",
+    "@applitools/visual-grid-client": "15.12.31",
     "boxen": "4.2.0",
     "chalk": "3.0.0",
     "detect-port": "1.3.0",
@@ -83,7 +88,9 @@
     "@applitools/scripts": "^1.1.0",
     "@applitools/sdk-shared": "0.9.11",
     "@applitools/snaptdout": "^1.0.1",
-    "@storybook/react": "^6.4.0",
+    "@storybook/addon-interactions": "^6.4.18",
+    "@storybook/react": "^6.4.18",
+    "@storybook/testing-library": "^0.0.9",
     "@testing-library/dom": "^5.6.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
