--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -122,7 +122,8 @@ Apollo SDK:
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
 "@applitools/eyes-storybook":
   feature:
-    - 
+    - |
+      Support [Storybook interactions](https://storybook.js.org/docs/react/essentials/interactions). For stories which have a `Play` function defined, the screenshot will be taken automatically after the `Play` flow is done.
   bug-fix:
     - added `properties` and `notifyOnCompletion` as optional Types of Batch (for TS)
     - Allow running with self-signed certificates
