[core] Align behavior of `forceFullPageScreenshot` config property with other SDKs (#916)
* [core] align behavior of forceFullPageScreenshot config property

* add changelog

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -13,7 +13,7 @@ Apollo SDK:
     - Added support for drivers that return screenshots in jpeg format
     - Increased max payload size from 100Mb to 254Mb
   bug-fix:
-    - 
+    - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
 "@applitools/eyes-selenium":
   feature:
     - |
@@ -26,6 +26,7 @@ Apollo SDK:
     - Fixed handling of navigation bar size on various devices
     - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
     - Fixed bug when navigation bar was presented in screenshot on Android 12
+    - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
 "@applitools/eyes-webdriverio":
   feature:
@@ -40,6 +41,7 @@ Apollo SDK:
       Support Galaxy S22 `DeviceName.Galaxy_S22` emulation device
   bug-fix:
     - Allow running with self-signed certificates
+    - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
 "@applitools/eyes-protractor":
   feature:
@@ -65,6 +67,7 @@ Apollo SDK:
     - Allow running with self-signed certificates
     - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
     - Fixed bug when navigation bar was presented in screenshot on Android 12
+    - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
 "@applitools/eyes-puppeteer":
   feature:
@@ -86,11 +89,13 @@ Apollo SDK:
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
     - Allow running with self-signed certificates
+    - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
 "@applitools/eyes-testcafe":
   feature:
     - 
   bug-fix:
+    - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
     - |
       Returned support of `showLogs` in configuration file and object
@@ -117,6 +122,7 @@ Apollo SDK:
     - Allow running with self-signed certificates
     - Fixed bug in native apps when screenshot of the element was taken only for the small visible part of the element
     - Fixed bug when navigation bar was presented in screenshot on Android 12
+    - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
 "@applitools/eyes-cypress":
   feature:
