--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fix issue with unexpected full-page screenshots
 "@applitools/eyes-selenium":
   feature:
     - 
