--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@applitools/bongo": "^2.1.0",
+    "@applitools/test-utils": "^1.3.2",
     "@wdio/cli": "5.18.6",
     "@wdio/dot-reporter": "5.18.6",
     "@wdio/local-runner": "5.18.6",
