--- a/packages/eyes-webdriverio-5-service/package.json
+++ b/packages/eyes-webdriverio-5-service/package.json
@@ -26,20 +26,16 @@
   "devDependencies": {
     "@applitools/bongo": "^2.1.0",
     "@applitools/test-utils": "^1.3.2",
-    "@wdio/cli": "5.18.6",
-    "@wdio/dot-reporter": "5.18.6",
-    "@wdio/local-runner": "5.18.6",
-    "@wdio/mocha-framework": "5.18.6",
-    "@wdio/sync": "5.18.6",
-    "chromedriver": "^83.0.0",
+    "@wdio/cli": "7.19.7",
+    "@wdio/dot-reporter": "7.19.7",
+    "@wdio/local-runner": "7.19.7",
+    "@wdio/mocha-framework": "7.19.7",
     "eslint": "^7.9.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.7",
-    "mocha": "^6.2.2",
-    "prettier": "1.19.0",
-    "wdio-chromedriver-service": "^5.0.2"
+    "prettier": "1.19.0"
   },
   "scripts": {
     "lint": "eslint . --ext .js",
