--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -17,8 +17,8 @@
     "test": "yarn build && yarn test:mocha && yarn lint",
     "test:versions": "yarn build && yarn test:e2e:versions && yarn lint",
     "test:mocha": "yarn test:unit && yarn test:it && yarn test:e2e",
-    "test:unit": "STDOUT_LEVEL=0 mocha --no-timeouts --trace-warnings 'test/unit/*.test.js'",
-    "test:it": "STDOUT_LEVEL=1 mocha --no-timeouts --trace-warnings 'test/it/*.test.js'",
+    "test:unit": "mocha --no-timeouts --trace-warnings 'test/unit/*.test.js'",
+    "test:it": "mocha --no-timeouts --trace-warnings 'test/it/*.test.js'",
     "test:e2e": "mocha --no-timeouts --trace-warnings 'test/e2e/*.e2e.test.js'",
     "test:e2e:versions": "npx mocha --no-timeouts --trace-warnings --require test/fixtures/storybook-versions/mochaHooks.js test/e2e/*.e2e.versions.test.js",
     "test:e2e:versions_local": "STORYBOOK_VERSION=latest npx mocha --no-timeouts --trace-warnings --require test/fixtures/storybook-versions/mochaHooks.js test/e2e/*.e2e.versions.test.js",
