--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,22 +12,22 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-selenium":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-playwright":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-protractor":
   feature:
     - Support UFG for native mobile
@@ -55,6 +55,7 @@ Apollo SDK:
     - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
     - Improve error message when failed to set viewport size
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-puppeteer":
   feature:
     - Support UFG for native mobile
@@ -78,11 +79,12 @@ Apollo SDK:
     - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
     - Improve error message when failed to set viewport size
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-testcafe":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-nightwatch":
   feature:
     - Support UFG for native mobile
@@ -109,12 +111,15 @@ Apollo SDK:
     - Fixed `CheckSetting`'s `fully` being overridden by `Configuration`'s `forceFullPageScreenshot`
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
     - Improve error message when failed to set viewport size
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-cypress":
   feature:
     - 
   bug-fix:
+    - Support `cy.eyesGetAllTestResults` in TypeScript
     - Set EyesExceptions (such as new test, diffs exception and failed test exception) to exception property in TestResultsSummary
     - Improve error message when failed to set viewport size
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-storybook":
   feature:
     - 
@@ -132,6 +137,7 @@ Apollo SDK:
     - Fixed handling of navigation bar size on various devices
     - Fixed bug when navigation bar was presented in screenshot on Android 12
     - Added support for drivers that return screenshots in jpeg format
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 eyes-browser-extension:
   feature:
     - 
@@ -141,6 +147,7 @@ eyes-browser-extension:
     - Fixed check region fully in classic execution when using CSS stitching
     - Support data urls in iframes
     - Improve error message when failed to set viewport size
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 applitools-for-selenium-ide:
   feature:
     - 
