--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed incorrect calculation of coded regions in classic mode when using CSS stitching
 "@applitools/eyes-selenium":
   feature:
     - 
