--- a/packages/spec-driver-puppeteer/package.json
+++ b/packages/spec-driver-puppeteer/package.json
@@ -36,6 +36,7 @@
     "test": "mocha ./test/**/*.spec.ts --no-timeouts -r ts-node/register",
     "setup": "yarn puppeteer:setup",
     "puppeteer:setup": "PUPPETEER_PRODUCT=firefox node ./node_modules/puppeteer/install.js",
+    "upgrade:framework": "if [ ! -z $APPLITOOLS_PUPPETEER_VERSION ]; then packagejson=`cat package.json`; yarn upgrade --no-lockfile puppeteer@$APPLITOOLS_PUPPETEER_VERSION; echo \"$packagejson\" > package.json; fi",
     "deps": "bongo deps",
     "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='spec-puppeteer' -f links='types utils test-utils",
     "gh:publish": "gh workflow run publish-spec-puppeteer.yml --ref $(git rev-parse --abbrev-ref HEAD)",
@@ -67,7 +68,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^4.3.7",
-    "mocha": "^10.0.0",
+    "mocha": "^9.2.2",
     "prettier": "^2.6.2",
     "puppeteer": "^14.1.2",
     "ts-node": "^10.8.0",
