--- a/.github/workflows/publish-playwright.yml
+++ b/.github/workflows/publish-playwright.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           if [ ${{inputs.multienv || github.event.inputs.multienv}} = true ]
           then
-            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"node-version\":12}]"
+            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"framework-version\":1.21,\"node-version\":12}]"
           else
             echo "::set-output name=environments::[{\"node-version\":16}]"
           fi
@@ -80,6 +80,8 @@ jobs:
         include: ${{fromJSON(needs.verify.outputs.environments)}}
     name: 'Test (node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
+    env:
+      APPLITOOLS_PLAYWRIGHT_VERSION: ${{matrix.framework-version}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v2
