--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -38,7 +38,7 @@ runs:
         echo "::endgroup::"
 
         echo "::group::Installing and updating dependencies"
-        yarn install
+        yarn install --ignore-engines
         npm run deps --if-present -- --commit
         echo "::endgroup::"
 
