--- a/packages/eyes-webdriverio-5/tsconfig.base.json
+++ b/packages/eyes-webdriverio-5/tsconfig.base.json
@@ -10,7 +10,7 @@
 
     "module": "commonjs",
     "target": "es2019",
-    "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
+    "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string", "dom"],
     "esModuleInterop": true,
     "noImplicitAny": true,
     "downlevelIteration": true,
